--- a/Core3Shop.Dal/Core3Shop.Dal.csproj
+++ b/Core3Shop.Dal/Core3Shop.Dal.csproj
@@ -12,4 +12,14 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.0.0-preview7.19365.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Initializer\" />
+    <Folder Include="Data\Repositary\" />
+    <Folder Include="Data\Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Core3Shop.Models\Core3Shop.Models.csproj" />
+  </ItemGroup>
+
 </Project>
