--- a/Core3Shop.Models/Core3Shop.Models.csproj
+++ b/Core3Shop.Models/Core3Shop.Models.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.0.0-preview7.19365.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core3Shop.Utility\Core3Shop.Utility.csproj" />
+  </ItemGroup>
+
 </Project>
