--- a/Core3Shop/appsettings.json
+++ b/Core3Shop/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Core3Shop-F8A20AC6-8E4F-4BB6-BE35-5DDFB04D54C7;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=dionis;Database=Core3Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
