--- a/Core3Shop/Core3Shop.csproj
+++ b/Core3Shop/Core3Shop.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -20,12 +20,12 @@
 
 
   <ItemGroup>
-    <ProjectReference Include="..\Core3Shop.Dal\Core3Shop.Dal.csproj" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 
   <ItemGroup>
-    <Folder Include="wwwroot\images\" />
+    <ProjectReference Include="..\Core3Shop.Bl\Core3Shop.Bl.csproj" />
   </ItemGroup>
 
 </Project>
