--- a/Core3Shop/Core3Shop.csproj
+++ b/Core3Shop/Core3Shop.csproj
@@ -20,7 +20,7 @@
 
 
   <ItemGroup>
-    <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\images\services\" />
   </ItemGroup>
 
 
